fixed overlapping text

--- a/ocr.css
+++ b/ocr.css
@@ -102,7 +102,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -113,9 +114,7 @@ body,
 }
 
 .line {
-  min-height: 30px;
   margin-bottom: 3px;
-  overflow: hidden;
 }
 
 #words {
